# chakraops

./: .env.example  .gitignore  .sql  BASELINE_BOOKMARK.md  CHANGELOG.md  POSITION_STRUCTURE.md  README.md  RUNBOOK_EXECUTION.md  config.yaml.example  main.py  package-lock.json  requirements.txt  run_sql.py
chakraops/: .env  .env.example  .gitignore  .sql  ARCHITECTURE.md  BASELINE_BOOKMARK.md  ChakraOps_Core_Watchlist.csv  README.md  config.yaml.example  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run_evaluation.py  run_sql.py
chakraops/app/: __init__.py
chakraops/chakraops.egg-info/: PKG-INFO  SOURCES.txt
chakraops/config/: alerts.yaml  runtime.yaml  scoring.yaml  universe.csv
chakraops/docs/: ACCOUNTS_AND_CAPITAL.md  ALERTING.md  ARCHITECTURE.md  AUDIT_REPORT.md  BASELINE.md  CHAKRAOPS_DESIGN_SYSTEM.md  CLEANUP_REPORT.md  DATA_CONTRACT.md  DATA_DICTIONARY.md  DATA_REQUIREMENTS.md  DECISION_STORE_CANONICAL.md  DELTA_GATE_FIX_SUMMARY.md  DEPLOYMENT.md  DOCS_CLEANUP_REPORT.md  EVALUATION_FIELD_INVENTORY.md  EVALUATION_PIPELINE.md  FIELD_WAIVERS.md  FREEZE_SNAPSHOT.md  FRONTEND_BACKEND_WIRING_AUDIT.md  LIFECYCLE_AND_ALERTS.md  LIVE_DEBUG_REPORT.md  ORATS_API_Reference.md  ORATS_API_Reference_ChakraOps_Final.docx  ORATS_DATAV2_ENDPOINT_AND_DATA_REFERENCE.md  ORATS_DATA_TRUTH_TABLE.md  ORATS_FIELD_TO_ENDPOINT_MAPPING.md  ORATS_OPTION_DATA_PIPELINE.md  ORATS_VALIDATION_CONFIDENCE.md  PHASE3_PORTFOLIO_AND_RISK.md  PHASE6_VALIDATION_REPORT.md  PHASE7_1_SUMMARY.md  PHASE7_2_SUMMARY.md  PHASE7_QUICK_REFERENCE.md  PHASE7_REFACTOR_REPORT.md  (+51 more)
(+892 files in other folders)
